загрузка на Github

--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="color-scheme" content="dark light" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="color-scheme" content="dark light">
     <title>Сложно сосредоточиться</title>
-    <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/globals.css" />
-    <link rel="stylesheet" href="./styles/variables.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="stylesheet" href="./styles/dark.css" />
-    <link rel="stylesheet" href="./styles/light.css" />
-    <link rel="icon" href="./images/favicon.ico" sizes="any" />
-    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="./images/favicon.png" />
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/globals.css">
+    <link rel="stylesheet" href="./styles/variables.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/dark.css">
+    <link rel="stylesheet" href="./styles/light.css">
+    <link rel="icon" href="./images/favicon.ico" sizes="any">
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="./images/favicon.png">
   </head>
   <body class="page theme_dark">
     <header class="header decorated-zone">
@@ -47,14 +47,14 @@
       </nav>
       <h1 class="header__title">no focus</h1>
       <p class="header__paragraph title-decor">
-        Что делать, когда не можешь делать ничего <br />Или почему нам так
+        Что делать, когда не можешь делать ничего <br/>Или почему нам так
         сложно сконцентрироваться, особенно когда очень надо
       </p>
     </header>
     <main class="content">
       <section class="content_section section-one">
         <h2 class="content__title section__title-one">
-          Почему сосредоточиться так <br />сложно
+          Почему сосредоточиться так <br/>сложно
         </h2>
         <div class="text_card text_card-column">
           <h3 class="subtitle title-decor titles">Многозадачность</h3>
@@ -196,31 +196,31 @@
               class="content__picture-image sunset"
               src="./images/sunset.png"
               alt="Закат в горах"
-            />
+            >
             <img
               loading="lazy"
               class="content__picture-image ice-cream"
               src="./images/ice-cream.png"
               alt="Миска с вкусняшками"
-            />
+            >
             <img
               loading="lazy"
               class="content__picture-image tape"
               src="./images/tape.png"
               alt="Касета с музыкой"
-            />
+            >
             <img
               loading="lazy"
               class="content__picture-image books"
               src="./images/books.png"
               alt="Кружка на стопке книг"
-            />
+            >
             <img
               loading="lazy"
               class="content__picture-image street"
               src="./images/street.png"
               alt="Улица в стиле Эдо"
-            />
+            >
           </picture>
         </div>
       </section>
